[package]
name = "live_gateway"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
env_logger = "0.9"
clap = { version = "3.1.6", features = ["derive"] }
tungstenite = "0.17.2"
